[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Alexandr Ovsyannikov <alexov2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
pyjwt = "^2.10.1"
pydantic-settings = "^2.10.1"
requests = "^2.32.4"
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
prometheus-fastapi-instrumentator = "^7.1.0"
prometheus-client = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
